--- a/styles.css
+++ b/styles.css
@@ -21,16 +21,30 @@ h2 {
     color: yellow;
 }
 
-.video-container {
+.video {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.book-list {
+    list-style: none;
+    padding: 0;
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
     justify-content: center;
 }
 
-.video {
+.book-list li {
     flex: 1 1 45%;
-    max-width: 500px;
+    max-width: 200px;
+    text-align: center;
+}
+
+.book-list img {
+    width: 100%;
+    height: auto;
+    border: 2px solid yellow;
 }
 
 footer {
