--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ h2 {
 
 footer {
     background-color: #333;
-    color: white;
+    color: rgb(49, 170, 33);
     text-align: center;
     padding: 10px;
     position: relative;
