--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f4f4f9;
+    background-color: #35ee06;
     color: #333;
     font-family: 'Roboto', sans-serif;
     margin: 0;
