--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ h1, h2 {
     margin: 20px;
     padding: 20px;
     border-radius: 10px;
-    background-color: white;
+    background: linear-gradient(to right, #f5f5f5, #e0e0e0);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -52,6 +52,12 @@ h1, h2 {
 .cuidado-palavras ul {
     list-style-type: none;
     padding: 0;
+}
+
+.cuidado-palavras li {
+    margin: 10px 0;
+    display: flex;
+    align-items: center;
 }
 
 .historico-racismo {
@@ -85,7 +91,7 @@ h1, h2 {
 }
 
 .livro:hover {
-    transform: scale(1.05);
+    transform: translateY(-5px);
 }
 
 .livro img {
