--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #f5f5f5;
+    background-color: #f0f0f0;
     color: #333;
     margin: 0;
     padding: 0;
 }
 
 header {
-    background-color: #6f4c3e; /* marrom escuro */
+    background-color: #ff5722; /* Laranja vibrante */
     color: white;
     text-align: center;
     padding: 20px 0;
@@ -15,13 +15,14 @@ header {
 
 h1, h2 {
     margin: 0;
+    font-family: 'Montserrat', sans-serif;
 }
 
-.resumo, .video-principal, .video-secundarios, .cuidado-palavras, .historico-racismo, .povo-preto, .livros {
+.resumo, .video-principal, .video-secundarios, .cuidado-palavras, .historico-racismo, .povo-preto, .livros, .social-media {
     margin: 20px;
     padding: 20px;
     border-radius: 10px;
-    background: linear-gradient(to right, #f5f5f5, #e0e0e0);
+    background: white;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -33,20 +34,9 @@ h1, h2 {
     border-radius: 10px;
 }
 
-.video-secundarios {
-    display: flex;
-    justify-content: space-around;
-}
-
 .video-container {
     display: flex;
-    justify-content: space-between;
-}
-
-.video-container iframe {
-    width: 30%;
-    height: 200px;
-    border-radius: 10px;
+    justify-content: space-around;
 }
 
 .cuidado-palavras ul {
@@ -60,20 +50,8 @@ h1, h2 {
     align-items: center;
 }
 
-.historico-racismo {
-    margin: 20px;
-    padding: 15px;
-    border-radius: 10px;
-    background-color: white;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
 .historico-racismo article {
     margin-bottom: 15px;
-}
-
-.historico-racismo h3 {
-    margin-top: 15px;
 }
 
 .livros {
@@ -87,11 +65,6 @@ h1, h2 {
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
-    transition: transform 0.2s;
-}
-
-.livro:hover {
-    transform: translateY(-5px);
 }
 
 .livro img {
@@ -99,8 +72,20 @@ h1, h2 {
     border-radius: 10px 10px 0 0;
 }
 
+.social-media {
+    text-align: center;
+    margin: 20px;
+}
+
+.social-media a {
+    margin: 0 10px;
+    color: #ff5722;
+    text-decoration: none;
+    font-size: 1.5em;
+}
+
 footer {
-    background-color: #6f4c3e;
+    background-color: #ff5722;
     color: white;
     text-align: center;
     padding: 20px 0;
