--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ h1, h2 {
     font-family: 'Montserrat', sans-serif;
 }
 
-.resumo, .video-principal, .musicas, .criatividade, .historico-racismo, .depoimentos, .social-media {
+.videos, .termos, .livros, .musicas, .jogos, .social-media {
     margin: 20px;
     padding: 20px;
     border-radius: 10px;
@@ -41,29 +41,42 @@ h1, h2 {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.video-principal iframe {
+.video-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.video-container iframe {
     width: 100%;
-    max-width: 600px;
-    height: 315px;
-    margin: 10px 0;
+    max-width: 300px;
+    height: 200px;
+    margin: 10px;
     border-radius: 10px;
 }
 
-.musicas ul {
+.termos ul, .livros ul, .musicas ul {
     list-style-type: none;
     padding: 0;
 }
 
-.musicas li {
+.termos li, .livros li, .musicas li {
     margin: 10px 0;
 }
 
-.galeria, .poesias {
-    margin: 10px 0;
+.jogos .game-links {
+    display: flex;
+    flex-direction: column;
 }
 
-.depoimentos .testemunhos {
+.game-link {
     margin: 10px 0;
+    padding: 10px;
+    background-color: #1DE9B6;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    text-align: center;
 }
 
 .social-media {
